ExportPdvb4AwbPlugin + KommProzessPanel: deprecated-Funktionen durch aktuelle ersetzt